[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Sprites/Objects/GoalOrb.png" type="Texture" id=1]
[ext_resource path="res://src/objects/GoalOrb.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 14 )

[sub_resource type="Animation" id=1]
resource_name = "Hue Changing"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("OrbSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 2, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hue Changing S"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("OrbSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 8, 7, 6 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("OrbSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="GoalOrb" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="OrbSprite" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 1 )
hframes = 5
vframes = 2

[node name="OrbCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -14 )
shape = SubResource( 3 )

[node name="OrbArea" type="Area2D" parent="."]
visible = false
collision_layer = 8

[node name="OrbHitbox" type="CollisionShape2D" parent="OrbArea"]
position = Vector2( 0, -14 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Hue Changing" = SubResource( 1 )
"anims/Hue Changing S" = SubResource( 4 )
anims/RESET = SubResource( 2 )

[connection signal="area_entered" from="OrbArea" to="." method="_on_OrbArea_area_entered"]
[connection signal="area_exited" from="OrbArea" to="." method="_on_OrbArea_area_exited"]
